<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/contact_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/contact_org"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_organization" />

    <EditText
        android:id="@+id/contact_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_title" />

    <EditText
        android:id="@+id/contact_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phone_number"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/contact_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_website"
        android:inputType="textUri"/>

    <EditText
        android:id="@+id/contact_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/contact_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_address"
        android:inputType="textPostalAddress"/>

</LinearLayout>