<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/input_wifi_ssid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_ssid" />

    <EditText
        android:id="@+id/input_wifi_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <RadioGroup
        android:id="@+id/wifi_radio_group"
        android:layout_marginTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:checkedButton="@+id/wpa">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_network_type"
            android:padding="5dp"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/wpa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wpa_hint" />

        <RadioButton
            android:id="@+id/wep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_wep" />

        <RadioButton
            android:id="@+id/open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_no_encryption" />
    </RadioGroup>

</LinearLayout>